ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "challenge"
  labels:
    name: "challenge"
