svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  labels:
    app: myapp-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
  selector:
    app: example-pod
